more tools intermediate

--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav align-items-center">
 
-        <!-- Domain and DNS -->
+        <!-- Domain, email and DNS -->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="domainDnsDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
@@ -85,7 +85,7 @@
             </ul>
           </li>
   
-          <!-- Accessibility -->
+          <!-- Accessibility & Usability -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="accessibilityDropdown" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
