--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -190,21 +190,65 @@
   
         <!-- User Actions -->
         <div class="d-flex align-items-center ms-3">
-          {% if current_user.is_authenticated %}
-          <div class="dropdown">
-            <button class="btn btn-outline-primary dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-              👤 Hi {{ current_user.username }}
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="userDropdown">
-              <!-- User Dropdown Content -->
-              <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi Perfil</a></li>
-              <!-- Other items -->
-            </ul>
-          </div>
-          {% else %}
-          <a class="btn btn-outline-primary me-2" href="{{ url_for('login') }}">Acceder</a>
-          <a class="btn btn-primary" href="{{ url_for('register') }}">Empezar gratis</a>
-          {% endif %}
+       
+
+            {% if current_user.is_authenticated %}
+    
+            <span class="nav-item dropdown">
+              <a class="btn btn-outline-primary me-2 ms-1 dropdown-toggle" href="#" id="domainDnsDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                👤 <span class="item-responsive">Hi {{ current_user.username }} <i class="fa-solid fa-chevron"></i></span>
+    
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    
+                <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi Perfil</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('edit_subscription') }}"> Subscripción</a></li>
+                <li><a href="{{ url_for('transaction_history') }}" class="dropdown-item">Renovaciones</a></li>
+                
+                
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <!-- <li><a href="{{ url_for('edit_full_profile') }}" class="dropdown-item">Editar Perfil Completo</a></li> -->
+                <li><a class="dropdown-item" href="{{ url_for('configuracion') }}"> Configuración</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('change_password') }}"> Seguridad</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('edit_payment_methods') }}">Formas de pago</a></li>
+                
+                {% if is_admin %}
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="{{ url_for('admin_register') }}">Añadir Usuario</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('admin_stats') }}">Estadisticas</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('configuracion') }}">Config</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="{{ url_for('activity') }}">Actividad</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('logs') }}">Accesos</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('usuarios') }}">Usuarios</a></li>
+    
+                {% endif %}
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-crown"></i> Soporte</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('logout') }}"> Cerrar sesión</a></li>
+              </ul>
+            </span>
+            {% else %}
+    
+            <a class="btn btn-outline-primary me-2 ms-1" href="{{ url_for('login') }}"><i class="fa-solid fa-key"></i>
+              Acceder</a>
+    
+            <a class="btn btn-outline-primary me-2 ms-1" href="{{ url_for('register') }}"><i class="fa-solid fa-crown"></i>
+              Empezar gratis</a></li>
+            {%endif%}
+            <!--
+            <a href="#" class="btn btn-outline-primary me-2">Sign in</a>
+            <a href="#" class="btn btn-primary">Start Free Trial</a> -->
+          
         </div>
       </div>
     </nav>
