--- a/app/templates/tools/domains/index.html
+++ b/app/templates/tools/domains/index.html
@@ -3,6 +3,7 @@
 {% block title %}Domains & Email Tools{% endblock %}
 
 {% block content %}
+{% include 'inc/breadcrumbs.html' %}
 <div class="container my-5">
     <!-- Hero Section -->
     <div class="hero-section text-center py-5">
