--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -253,7 +253,7 @@
       </div>
     </nav>
 
-    <!-- Navbar -->
+    <!-- Navbar 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
       <a class="navbar-brand" href="/">My Tools App</a>
@@ -283,7 +283,7 @@
           </ul>
       </div>
   </div>
-</nav>
+</nav>-->
 
   </header>
   
