--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -36,7 +36,7 @@
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="domainDnsDropdown" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
-              📬 Dominios & Correo
+              📬 Dominios
             </a>
             <ul class="dropdown-menu" aria-labelledby="domainDnsDropdown">
               <div class="dropdown-menu-columns">
@@ -89,7 +89,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="accessibilityDropdown" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
-              ♿ Accesibilidad & Usabilidad
+              ♿ Accesibilidad
             </a>
             <ul class="dropdown-menu" aria-labelledby="accessibilityDropdown">
               <div class="dropdown-menu-columns">
@@ -188,6 +188,7 @@
           </ul>
         </div>
   
+
         <!-- User Actions -->
         <div class="d-flex align-items-center ms-3">
        
