--- a/app/templates/inc/header.html
+++ b/app/templates/inc/header.html
@@ -204,6 +204,8 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
     
                 <li><a class="dropdown-item" href="{{ url_for('profile') }}">Mi Perfil</a></li>
+                <li><a href="{{ url_for('view_logs') }}"  class="dropdown-item">Ver Historial de Actividades</a></li>
+
                 <li><a class="dropdown-item" href="{{ url_for('edit_subscription') }}"> Subscripción</a></li>
                 <li><a href="{{ url_for('transaction_history') }}" class="dropdown-item">Renovaciones</a></li>
                 
